@startuml
'https://plantuml.com/class-diagram

abstract class StudyManagement {
    - String name
    + {abstract} int getSoTC()
    + {abstract} int getFee()
    + {abstract} String info()
    + {abstract} StudyManagement add(StudyManagement sm)
    + {abstract} void remove(StudyManagement sm)
}

class Course

class Subject {
    int soTC, fee;
}

Course *--> "*" StudyManagement: "courses"

StudyManagement <|-- Subject
StudyManagement <|--- Course




@enduml